pkg/gox/testdata/errors/spread.gox
package demo

func View() any {
	return <main {...props}></main>
}
